Add view for an ingredient. Closes #18